# MNE-BIDS-conversion-guide

./: Clean Pipeline Code.ipynb  MNE BIDS code.ipynb  MNE-BIDS pipeline first draft.ipynb  MNE-BIDS pipeline.ipynb  MNE-BIDS_age_sheet.xlsx  MNE-BIDS_events_sheet.xlsx  MNE-BIDS_general_sheet.xlsx  MNE_BIDS_sheet.xlsx  README.md  RosettaTest.ipynb  pyproject.toml  requirements.txt
