[project]
name = "rosettastate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter-collaboration>=4.0.2",
    "jupyterlab>=4.4.4",
    "jupyterlab-git>=0.51.2",
    "marimo>=0.14.7",
    "mne-bids[full]>=0.16.0",
]
