[project]
name = "rosettastate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "mne-bids[full]>=0.16.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.4",
    "jupyterlab-git>=0.51.2",
]
